# imgd

./: Cargo.toml  README.md  start.sh
.cargo/: config.toml
.github/workflows/: build-linux-amd64.yml
deploy/: install.sh
deploy/nginx/: imgd.conf
deploy/systemd/: imgd.service
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  token.rs  upload.rs  webp.rs
tests/: upload.rs
